<resources>
    <string name="app_name">Keyneez</string>

    <!-- error -->
    <string name="binding_error_msg">Binding not initialized to reference the view.</string>
    <string name="unknown_error_msg">알 수 없는 오류가 발생했습니다.</string>
    <string name="view_type_error_msg">Unknown View Type : %d</string>

    <!-- main -->
    <string name="main_menu_home">홈</string>
    <string name="main_menu_explore">탐색</string>
    <string name="main_menu_like">좋아요</string>
    <string name="main_menu_setting">설정</string>

    <!-- search -->
    <string name="search_content">제목, 키워드</string>
    <string name="search_cancel">취소</string>
    <string name="search_result">검색결과</string>
    <string name="search_count">%s</string>
    <string name="search_result_end">개</string>
    <string name="search_category">기획</string>
    <string name="search_title">행주산성 맛집 투어</string>
    <string name="search_period">%s–%s</string>
    <string name="search_fee">무료 입장</string>
    <string name="search_no_result">검색결과가 없습니다.</string>
    <string name="search_contentdescription">검색버튼</string>
    <string name="search_recycler_contentdescription">리사이클러뷰</string>
    <string name="search_heart_contentdescription">하트</string>
    <string name="search_content_contentdescription">콘텐츠</string>

    <!-- explore -->
    <string name="explore_title">탐색하기</string>
    <string name="explore_popular">인기</string>
    <string name="explore_recent">최신</string>
    <string name="explore_entire">전체</string>
    <string name="explore_hobby">취미</string>
    <string name="explore_activity">활동</string>
    <string name="explore_career">진로</string>
    <string name="explore_content_title">행주산성\n맛집 투어</string>
    <string name="explore_date">%s-%s</string>
    <string name="toolbar_contentdescription">툴바</string>
    <string name="explore_search_contentdescription">검색버튼</string>
    <string name="recycler_contentdescription">리사이클러뷰</string>
    <string name="heart_contentdescription">하트</string>
    <string name="content_contentdescription">콘텐츠</string>

    <!-- like -->
    <string name="like_title">좋아요</string>
    <string name="like_num">총 %s개</string>
    <string name="like_edit">편집</string>
    <string name="like_cancel">취소</string>
    <string name="like_select">%s개 선택</string>
    <string name="like_delete_title">삭제할 활동 선택</string>
    <string name="like_delete_btn">삭제하기</string>
    <string name="like_delete_complete">삭제 완료</string>

    <!-- setting -->
    <string name="setting_title">설정</string>

    <!-- ui state -->
    <string name="msg_search_null">검색결과가 없습니다.</string>
    <string name="msg_server_error">네트워크 연결에 실패했습니다.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setting_login_info">로그인 정보</string>
    <string name="setting_auto_login">자동 로그인 사용</string>
    <string name="setting_push_alarm">푸시 알람 설정</string>
    <string name="setting_version_info">버전 정보</string>
    <string name="setting_terms_of_service">서비스 이용 약관</string>
    <string name="setting_privacy_policy">개인정보 처리방침</string>
    <string name="setting_opensource_license">오픈소스 라이센스</string>
    <string name="setting_logout">로그아웃</string>
    <string name="setting_leave">탈퇴하기</string>
</resources>