<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data></data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_home_recent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_explore_recent_all"
            style="@style/BodyMedium16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_gray900_fill_9_rect"
            android:paddingHorizontal="16dp"
            android:paddingVertical="6dp"
            android:text="@string/explore_entire"
            android:textColor="@color/gray050" />

        <TextView
            android:id="@+id/tv_explore_recent_culture"
            style="@style/BodyMedium16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_gray200_fill_9_rect"
            android:paddingHorizontal="16dp"
            android:paddingVertical="6dp"
            android:text="@string/explore_hobby"
            android:textColor="@color/gray400" />

        <TextView
            android:id="@+id/tv_explore_recent_outside"
            style="@style/BodyMedium16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_gray200_fill_9_rect"
            android:paddingHorizontal="16dp"
            android:paddingVertical="6dp"
            android:text="@string/explore_activity"
            android:textColor="@color/gray400" />

        <TextView
            android:id="@+id/tv_explore_recent_career"
            style="@style/BodyMedium16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_gray200_fill_9_rect"
            android:paddingHorizontal="16dp"
            android:paddingVertical="6dp"
            android:text="@string/explore_career"
            android:textColor="@color/gray400" />

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/flow_explore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:constraint_referenced_ids="tv_explore_recent_all, tv_explore_recent_culture, tv_explore_recent_outside, tv_explore_recent_career"
            app:flow_horizontalGap="9dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_explore_recent"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="11dp"
            android:clipToPadding="false"
            android:nestedScrollingEnabled="false"
            android:paddingHorizontal="15dp"
            android:paddingBottom="113dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_explore_recent_all"
            tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            tools:listitem="@layout/item_explore_content"
            tools:spanCount="2" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>