<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="data"
            type="com.release.keyneez.data.entity.response.ResponseGetLikeDto" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_like_rv"
        isSelected="@{data.isSelected}"
        android:layout_width="match_parent"
        android:layout_height="236dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="14dp"
        android:clickable="true">


        <ImageView
            android:id="@+id/iv_like_background"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/shape_gray050_fill_15_rect"
            android:clickable="true"
            android:contentDescription="@string/recycler_contentdescription"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_like_category"
            style="@style/CaptionMedium12"
            setCategory="@{data.category}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="17dp"
            android:background="@drawable/shape_purple500_fill_49_rect"
            android:paddingHorizontal="8dp"
            android:paddingVertical="3dp"
            android:text="@{data.category}"
            android:textColor="@color/gray050"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/explore_activity" />

        <ImageButton
            android:id="@+id/btn_explore_liked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="3dp"
            android:background="@null"
            android:padding="12dp"
            android:src="@drawable/sel_search_drawable_bnv_like_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/tv_like_content_title"
            style="@style/BodyBold16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="15dp"
            android:text="@{data.title}"
            android:textColor="@color/gray800"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_like_category"
            tools:text="@string/explore_content_title" />

        <TextView
            android:id="@+id/tv_like_date"
            style="@style/CaptionMedium10"
            putEndDate="@{data.end}"
            putStartDate="@{data.start}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="4dp"
            android:textColor="@color/gray400"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_like_content_title"
            tools:text="@string/explore_date" />

        <ImageView
            android:id="@+id/iv_like_content"
            setImage="@{data.img}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="28dp"
            android:layout_marginBottom="18dp"
            android:contentDescription="@string/content_contentdescription"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:src="@drawable/img_explore_background" />

        <ImageView
            android:id="@+id/iv_like_checked_background"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/shape_gray900_40_fill_15_rect"
            android:contentDescription="@string/recycler_contentdescription"
            android:scaleType="centerCrop"
            android:visibility="@{data.isSelected ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btn_like_checked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="11dp"
            android:background="@null"
            android:src="@drawable/ic_like_check"
            android:visibility="@{data.isSelected ? View.VISIBLE : View.GONE}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>