<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.release.keyneez.presentation.main.explore.popular.PopularViewModel" />

        <variable
            name="data"
            type="com.release.keyneez.data.entity.response.ResponseGetContentDto" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_home_popular"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true">

        <TextView
            android:id="@+id/tv_explore_popular_all"
            style="@style/BodyRegular16"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:background="@drawable/sel_explore_drawable_bnv_category"
            android:paddingHorizontal="16dp"
            android:paddingVertical="6dp"
            android:clickable="true"
            android:text="@string/explore_entire"
            android:textColor="@color/sel_explore_drawable_text_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_explore_popular_hobby"
            style="@style/BodyRegular16"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:background="@drawable/sel_explore_drawable_bnv_category"
            android:paddingHorizontal="16dp"
            android:paddingVertical="6dp"
            android:clickable="true"
            android:onClick="@{()->vm.getPopularData()}"
            android:text="@string/explore_hobby"
            android:textColor="@color/sel_explore_drawable_text_color"
            app:layout_constraintStart_toEndOf="@id/tv_explore_popular_all"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_explore_popular_outside"
            style="@style/BodyRegular16"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:background="@drawable/sel_explore_drawable_bnv_category"
            android:paddingHorizontal="16dp"
            android:clickable="true"
            android:onClick="@{()->vm.getPopularData()}"
            android:paddingVertical="6dp"
            android:text="@string/explore_activity"
            android:textColor="@color/sel_explore_drawable_text_color"
            app:layout_constraintStart_toEndOf="@id/tv_explore_popular_hobby"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_explore_popular_career"
            style="@style/BodyRegular16"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:clickable="true"
            android:background="@drawable/sel_explore_drawable_bnv_category"
            android:paddingHorizontal="16dp"
            android:onClick="@{()->vm.getPopularData()}"
            android:paddingVertical="6dp"
            android:text="@string/explore_career"
            android:textColor="@color/sel_explore_drawable_text_color"
            app:layout_constraintStart_toEndOf="@id/tv_explore_popular_outside"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_explore_popular"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="11dp"
            android:clipToPadding="false"
            android:nestedScrollingEnabled="false"
            android:paddingHorizontal="15dp"
            android:paddingBottom="113dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_explore_popular_all"
            app:spanCount="2"
            tools:listitem="@layout/item_explore_content" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>